# cmmc-compliance-engine

./: .gitignore  ARCHITECTURE.md  COVERAGE.md  README.md  ROADMAP.md  cli.py  index.html  justfile  pyproject.toml  walkthrough.html
artifacts/: ssp.md
backends/: DESIGN.md
docs/: ACCEPTANCE.md  ARCHITECTURE.md  AS-BUILT.md  AUDITOR-GUIDE.md  COVERAGE.md  KNOWN-ISSUES.md  ROADMAP.md  SOP.md
documents/: DESIGN.md  queries.py  ssp.py
evidence/: DESIGN.md  binding.py  hashing.py
notebook/: AUDIT.md  _engine.py  compliance_walkthrough.py
notebooks/: OUTLINE.md  README.md  _engine.py  compliance_walkthrough.py
ontology/: DESIGN.md  cmmc-edit.ttl
oracles/: DESIGN.md  assertion.py  criteria.py
order-compiler/: DESIGN.md  clause_library.py  compiler.py  cop.py  gate1.py  obligations.ttl  rule_library.py
output/: audit.json  audit.md  run_state.json  ssp.md
pipeline/: DESIGN.md  dataset.py  plan.ttl  plan_execution.py  registry.py  runner.py  state.py
reference/: control-catalog.md  document-binding.md
scripts/: build_ontology.py  fetch_imports.py
structural/: DESIGN.md  tier1.ttl
tests/: test_attestation_gsn.py  test_attested_evidenced.py  test_attested_reference.py  test_audit.py  test_backends.py  test_bom.py  test_clause_library.py  test_cli.py  test_cmmc_ontology_parse.py  test_compiler.py  test_cop.py  test_evidence_binding.py  test_flexo.py  test_gate1.py  test_generators.py  test_hashing.py  test_named_graphs.py  test_notebook_smoke.py  test_nv012_e2e.py  test_ontology_build.py  test_ontology_shapes.py  test_ontology_size.py  test_oracles.py  (+18 more)
(+143 files in other folders)
