[project]
name = "compliance-engine"
version = "0.0.0"
description = "CMMC L2 / IL5 / ITAR compliance engine on a requirements-traceability substrate"
requires-python = ">=3.12"
dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.31.0",
    "pydantic>=2.0",
    "typer>=0.12,<1.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
# Inherit the ADCS discipline: package importable from repo root; skip live/network by default.
pythonpath = ["."]
addopts = "-m 'not live and not network'"
markers = [
    "live: opt-in tests that hit live services",
    "network: opt-in tests that fetch over the network",
    "terraform: tests that invoke the terraform binary; skip when absent",
]
